fix display milli-second alignment

--- a/index.css
+++ b/index.css
@@ -111,7 +111,7 @@ label{
 .remaining{
     display: flex;
     justify-content: center;
-    margin: 0 10px;
+    margin: 0 8px;
     padding: 10px 2px;
     font-size: 5rem;
     align-items: center;
